--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
 
         "codeception/base": "^2.2.3",
         "codeception/verify": "~0.3.1",
-        "codeception/specify": "~0.4.3"
+        "codeception/specify": "~0.4.3",
+        "kint-php/kint": "^2.2"
     },
     "config": {
         "process-timeout": 1800,
